--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -162,7 +162,7 @@
 										}
 
 										<div style="padding: 15px; text-align: center;">
-											<div style="text-align: center;">
+											<div style="text-align: center; max-width: 430px;">
 												@tooltipDatos.Nombre
 											</div>
 
@@ -176,7 +176,7 @@
 
 											@if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
 											{
-												<div style="text-align: center;">
+												<div style="text-align: center; font-size: 14px;">
 													@tooltipDatos.UsuarioMensaje
 												</div>
 											}
