--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -7,8 +7,8 @@
     --colorTextoHover: #b9e2fa;
     --colorTextoVisitado: #cbeafb;
     --fondoEntrada: #0d1621;
-    --fondoBoton: #1982bf;
-    --fondoBotonHover: #1671a6;
+    --fondoBoton: #146a9c;
+    --fondoBotonHover: #105279;
     --fondoBotonPequeño: #0d1621;
     --fondoBotonPequeñoHover: #060a0f;
     --colorTextoPeligro: #f04f5e;
