--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/SteamAccount.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/SteamAccount.cshtml
@@ -8,8 +8,8 @@
 
 <div style="font-size: 20px; margin-bottom: 20px;">@ViewData["Title"]</div>
 
-@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.CuentaSteam>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
-
+@* @(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.CuentaSteam>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+ *@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
