--- a/pepeizqs deals web/Pages/Account/Logout.cshtml
+++ b/pepeizqs deals web/Pages/Account/Logout.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 
 @using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
 
 @attribute [IgnoreAntiforgeryToken]
 
