--- a/pepeizqs deals web/Pages/Componentes/Cuenta/CambioContrasena.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/CambioContrasena.razor
@@ -7,17 +7,17 @@
 
 @if (usuario != null)
 {
-    <div class="row" style="margin-top: 10px;">
+    <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
         <div style="margin-bottom: 20px;">
-            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String18")</label>
-            <input value="@contraseñaActual" @onchange="@(e => CambiarActualContraseña(e))" type="password" class="entrada-texto" autocomplete="current-password" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String21")" />         
+            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword1", "Account")</label>
+            <input value="@contraseñaActual" @onchange="@(e => CambiarActualContraseña(e))" type="password" class="entrada-texto" autocomplete="current-password" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword2", "Account")" />
         </div>
 
         <div style="margin-bottom: 20px;">
-            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String19")</label>
-            <input value="@contraseñaNueva1" @onchange="@(e => CambiarNuevaContraseña1(e))" type="password" class="entrada-texto" autocomplete="new-password" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String22")" />
+            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword3", "Account")</label>
+            <input value="@contraseñaNueva1" @onchange="@(e => CambiarNuevaContraseña1(e))" type="password" class="entrada-texto" autocomplete="new-password" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword4", "Account")" />
 
-            @if (string.IsNullOrEmpty(@mensajeAviso1) == false)
+            @if (string.IsNullOrEmpty(mensajeAviso1) == false)
             {
                 <div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
                     @mensajeAviso1
@@ -25,11 +25,11 @@
             }
         </div>
 
-        <div style="margin-bottom: 20px;">
-            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String20")</label>
-            <input value="@contraseñaNueva2" @onchange="@(e => CambiarNuevaContraseña2(e))" type="password" class="entrada-texto" autocomplete="new-password" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String23")" />
+        <div style="margin-bottom: 30px;">
+            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword5", "Account")</label>
+            <input value="@contraseñaNueva2" @onchange="@(e => CambiarNuevaContraseña2(e))" type="password" class="entrada-texto" autocomplete="new-password" aria-required="true" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword6", "Account")" />
 
-            @if (string.IsNullOrEmpty(@mensajeAviso2) == false)
+            @if (string.IsNullOrEmpty(mensajeAviso2) == false)
             {
                 <div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
                     @mensajeAviso2
@@ -39,17 +39,17 @@
 
         <div style="display: flex; flex-direction: column;">
             <div class="perfil-flexible-izquierda">
-                <button @onclick="ClickearCambiarContraseña" class="boton" style="font-size: 18px;">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String24")</button>
+                <button @onclick="ClickearCambiarContraseña" class="boton" style="font-size: 18px;">@Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword7", "Account")</button>
             </div>
 
-            @if (string.IsNullOrEmpty(@mensajeExito) == false)
+            @if (string.IsNullOrEmpty(mensajeExito) == false)
             {
                 <div class="alert alert-success alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
                     @mensajeExito
                 </div>
             }
 
-            @if (string.IsNullOrEmpty(@mensajeError) == false)
+            @if (string.IsNullOrEmpty(mensajeError) == false)
             {
                 <div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
                     @mensajeError
@@ -78,9 +78,9 @@
     private string mensajeExito = string.Empty;
     private string mensajeError = string.Empty;
 
-    protected override void OnInitialized()
+    protected override async void OnInitialized()
     {
-        usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
+        usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
     }
 
     private void CambiarActualContraseña(ChangeEventArgs texto)
@@ -94,21 +94,21 @@
 
         if (contraseñaNueva1.Length > 0 && contraseñaNueva1.Length < 6)
         {
-            mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String25");
+            mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword8", "Account");
         }
         else if (contraseñaNueva1.Length > 5)
         {
             if (contraseñaNueva1.Any(char.IsDigit) == false)
             {
-                mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String26");
+                mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword9", "Account");
             }
             else if (contraseñaNueva1.Any(char.IsUpper) == false)
             {
-                mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String30");
+                mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword10", "Account");
             }
             else if (contraseñaNueva1.Any(char.IsLetterOrDigit) == false)
             {
-                mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String31");
+                mensajeAviso1 = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword11", "Account");
             }
             else
             {
@@ -141,7 +141,7 @@
             }
             else
             {
-                mensajeAviso2 = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String27");
+                mensajeAviso2 = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword12", "Account");
             }
         }
         else
@@ -161,7 +161,7 @@
 
             if (resultado1 == false)
             {
-                mensajeError = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String32");
+                mensajeError = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword13", "Account");
             }
             else
             {
@@ -169,12 +169,12 @@
 
                 if (resultado2.Succeeded == true)
                 {
-                    mensajeExito = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String28");
+                    mensajeExito = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword14", "Account");
                     Herramientas.Correos.EnviarCambioContraseña(usuario.Email);
                 }
                 else
                 {
-                    mensajeError = Herramientas.Idiomas.CogerCadena(idioma, "Settings.String29");
+                    mensajeError = Herramientas.Idiomas.CogerCadena(idioma, "ChangePassword15", "Account");
 
                     foreach (var error in resultado2.Errors)
                     {
