--- a/pepeizqs deals web/Pages/Componentes/Cuenta/ContrasenaOlvidada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/ContrasenaOlvidada.razor
@@ -8,23 +8,25 @@
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
 
-<div class="perfil">
-    <div class="texto-info">@Herramientas.Idiomas.CogerCadena(idioma, "ForgotPassword.String1")</div>
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); max-width: 600px; padding: 40px; margin: auto;">
+    <div class="texto-info">@Herramientas.Idiomas.CogerCadena(idioma, "String1", "AccountForgotPassword")</div>
 
     <hr>
 
     <div class="row">
         <div style="display: flex; flex-direction: column;">
-            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "ForgotPassword.String2")</label>
-            <input value="@correo" @onchange="@(e => CambiarCorreo(e))" style="padding: 5px 10px; background-color: var(--fondoEntrada); border: 0px; color: var(--colorTexto); display: block; max-width: 500px;" />
+            <label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "String2", "AccountForgotPassword")</label>
+            <input value="@correo" @onchange="@(e => CambiarCorreo(e))" style="padding: 5px 10px; background-color: var(--fondoEntrada); border: 0px; color: var(--colorTexto); display: block;" />
 
-            <div class="perfil-flexible-izquierda" style="margin-top: 20px;">
-                <button @onclick="EnviarCorreo" class="boton" style="font-size: 18px;">@Herramientas.Idiomas.CogerCadena(idioma, "ForgotPassword.String3")</button>
+            <div style="margin-top: 30px;">
+                <button @onclick="EnviarCorreo" class="boton" style="font-size: 18px;">
+                    @Herramientas.Idiomas.CogerCadena(idioma, "String3", "AccountForgotPassword")
+                </button>
             </div>
 
-            @if (string.IsNullOrEmpty(@mensajeExito) == false)
+            @if (string.IsNullOrEmpty(mensajeExito) == false)
             {
-                <div class="alert alert-success alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
+                <div class="alert alert-success alert-dismissible" style="margin-bottom: 0px; margin-top: 30px;" role="alert">
                     @mensajeExito
                 </div>
             }
@@ -66,10 +68,10 @@
                     string codigo = await UserManager.GeneratePasswordResetTokenAsync(usuario);
                     codigo = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(codigo));
 
-                    string enlaceFinal = "https://pepeizqdeals.com/Identity/Account/ResetPassword?code=" + codigo;
+                    string enlaceFinal = "https://pepeizqdeals.com/Account/ResetPassword?code=" + codigo;
 
                     Herramientas.Correos.EnviarContraseñaOlvidada(enlaceFinal, correo);
-                    mensajeExito = Herramientas.Idiomas.CogerCadena(idioma, "ForgotPassword.String4");
+                    mensajeExito = Herramientas.Idiomas.CogerCadena(idioma, "String4", "AccountForgotPassword");
                 }
             }
         }
