--- a/pepeizqs deals web/Pages/Componentes/Cuenta/CuentaSteam.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/CuentaSteam.razor
@@ -10,58 +10,49 @@
 {
 	if (usuario.EmailConfirmed == true)
 	{
-		<div style="margin-top: 10px;">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
 			<input class="entrada-texto" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String45")" value="@usuario.SteamAccount" @oninput="TextoCambiaSteamCuenta" disabled="@desactivar" />
 
-			<div style="display: flex; margin-top: 15px; margin-left: 10px;">
-				<div style="width: 6%; padding: 10px;">
+			<div style="display: flex; align-items: start; margin: 20px 0px;">
+				<div style="padding-top: 10px; padding-right: 20px;">
 					<i class="fa-solid fa-circle-info" style="font-size: 30px;"></i>
 				</div>
 
-				<div style="width: 94%;">
-					<label class="texto-info-entrada">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String46")</label>
+				<div style="width: 100%;">
+					<label>@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String46")</label>
 
-					<button @onclick="ClickearEnseñarImagen" class="btn btn-link" style="outline: none; border: 0; padding-left: 10px; color: var(--colorTextoOscuro);">
+					<button @onclick="ClickearEnseñarImagen" style="outline: none; border: 0; background-color: transparent; color: var(--colorTextoOscuro); margin-top: 20px; padding: 0px; text-align: left;">
 						@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String47")
 					</button>
-
-					@if (enseñarImagen == true)
-					{
-						<img src="/imagenes/otros/permisos.jpg" style="margin: 10px;" />
-					}
 				</div>
 			</div>
+
+			@if (errorCuentaUsada == true)
+			{
+				<div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
+					@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String61")
+				</div>
+			}
+
+			@if (string.IsNullOrEmpty(enlaceCuenta) == false)
+			{
+				<button class="boton" style="font-size: 18px; max-width: 250px; margin-top: 20px;" @onclick="@(e => ActualizarDatos(e))" disabled="@desactivar">
+					@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String63")
+				</button>
+			}
 		</div>
-
-		@if (errorCuentaUsada == true)
-		{
-			<div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String61")
-			</div>
-		}
-
-		@if (string.IsNullOrEmpty(enlaceCuenta) == false)
-		{
-			<hr style="margin-top: 20px; margin-bottom: 20px;" />
-
-			<button class="boton-pequeño" style="padding: 10px 15px; max-width: 250px;" @onclick="@(e => ActualizarDatos(e))" disabled="@desactivar">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String63")
-			</button>
-		}
 
 		@if (usuario.SteamId != null || usuario.Nickname != null || usuario.SteamGames != null || usuario.SteamWishlist != null || usuario.OfficialGroup != null)
 		{
-			<hr style="margin-top: 20px; margin-bottom: 20px;" />
-
-			<div class="perfil-flexible-centrado" style="align-items: start;">
+			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px; display: flex; align-items: start;">
 				@if (string.IsNullOrEmpty(usuario.Avatar) == false)
 				{
-					<div style="width: 10%; padding: 3px 10px;">
+					<div style="padding-right: 40px">
 						<img src="@usuario.Avatar" style="max-width: 70px; max-height: 70px;" />
 					</div>
 				}
 
-				<div style="width: 90%; padding-left: 10px;">
+				<div style="width: 100%;">
 					@if (string.IsNullOrEmpty(usuario.SteamId) == false)
 					{
 						<div>
@@ -102,12 +93,25 @@
 	}
 	else
 	{
-		<div style="margin-top: 10px;">
-			<div class="alert alert-danger alert-dismissible" style="margin-bottom: 0px; margin-top: 20px;" role="alert">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+			<div class="alert alert-danger alert-dismissible" style="margin: 0px;" role="alert">
 				@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String44")
 			</div>
 		</div>
 	}
+}
+
+@if (enseñarImagen == true)
+{
+	<div class="opciones-panel">
+		<div style="display: flex; align-items: start; margin: auto; justify-content: center;">
+			<button style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 8px 15px;" @onclick="ClickearEnseñarImagen">
+				<i class="fa-solid fa-xmark" style="font-size: 30px;"></i>
+			</button>
+
+			<img src="/imagenes/otros/permisos.jpg" style="margin-left: 20px; max-width: 100%; max-height: 100%;" />
+		</div>
+	</div>	
 }
 
 @code {
@@ -221,7 +225,7 @@
 
 		if (enlaceCuenta.Contains("https://steamcommunity.com/id/") == true || enlaceCuenta.Contains("https://steamcommunity.com/profiles/") == true)
 		{
-			SteamUsuario datos = await Cuenta.CargarDatos(enlaceCuenta);
+			SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(enlaceCuenta);
 
 			if (datos != null)
 			{
